2010-10-08  smeghead <smeghead@users.sourceforge.jp>

	* code comment translations.

2010-09-10  smeghead <smeghead@users.sourceforge.jp>

	* ajdust css of top page edit.

2010-08-29  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.17 released.

2010-08-29  smeghead <smeghead@users.sourceforge.jp>

	* add link-disabled css definition to top.css

2010-08-27  smeghead <smeghead@users.sourceforge.jp>

	* translate code comment.

2010-08-25  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.
	use localtime_r function instead of localtime.

2010-08-23  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.16 released.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* add SVN connect. when reply, if parameter was not suplied, register last
	posted value.
	* add SVN post-commit perl script.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.15 released.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* prepare release.

2010-07-29  smeghead <smeghead@users.sourceforge.jp>

	* fixed generate hyper link bug. in multiple lines fields, make space(' ') end of hyper link character.
	* add LINK_DISABLED option. when LINK_DISABLED is not 0, not to generate hyper
	links.

2010-07-28  smeghead <smeghead@users.sourceforge.jp>

	* add rel=nofollow to auto generated hyper links.
	* only textarea field, generates hyper links. when display other elements,
	don't generates hyper links.
	* display remote address. against spamer.

2010-07-23  smeghead <smeghead@users.sourceforge.jp>

	* translated code comment.

2010-07-22  smeghead <smeghead@users.sourceforge.jp>

	* Bapt gave me the patch. use mkstemp instead of mktemp. Thank Bapt!

2010-06-30  smeghead <smeghead@users.sourceforge.jp>

	* Starbug1の公式サイトのドメインを取ったので、公式サイトのURLを変更した。

2010-06-17  smeghead <smeghead@users.sourceforge.jp>
