@@ -763,4 +763,7 @@ span.link-disabled {
     font-weight: bold;
     color: red;
 }
+form.file-hide-button {
+    display: inline;
+}
 /* vim: set ts=4 sw=4 sts=4 expandtab fenc=utf-8: */
